[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reflex-r2-upload"
version = "0.1.3"
description = "Browser-direct Cloudflare R2 uploads for Reflex"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "reflex",
    "boto3",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/JiaLiangChen99/reflex_r2_upload"
Documentation = "https://github.com/JiaLiangChen99/reflex_r2_upload/tree/main/docs/en/README.md"
Repository = "https://github.com/JiaLiangChen99/reflex_r2_upload"
Issues = "https://github.com/JiaLiangChen99/reflex_r2_upload/issues"
Changelog = "https://github.com/JiaLiangChen99/reflex_r2_upload/releases"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "build",
]

[tool.hatch.build.targets.wheel]
packages = ["reflex_r2_upload"]

[tool.hatch.build.targets.sdist]
include = [
    "/reflex_r2_upload",
    "/README.md",
    "/README.zh-CN.md",
]

[tool.pytest.ini_options]
markers = [
    "r2: integration tests against a real R2 bucket (requires .env credentials)",
]
